--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "date-fns": "^3.6.0",
     "diff": "^5.2.0",
     "framer-motion": "^11.2.12",
+    "html2canvas": "^1.4.1",
     "isbot": "^4.1.0",
     "istextorbinary": "^9.5.0",
     "jose": "^5.6.3",
